# LuaSTG-Retro

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License.txt  PMDmini.md  PMDwin.md  Readme.md  SECURITY.md  version.json
.github/workflows/: arm64.yml  c-cpp.yml  cpp-ci.yml  release.yml
LuaSTG/: CMakeLists.txt  import_luastg_options.h.in
LuaSTG/Core/: ApplicationModel_Win32.cpp
LuaSTG/Core/Graphics/: Device.hpp  Model_D3D11.cpp  Model_Shader_D3D11.cpp  Renderer.hpp  Renderer_D3D11.cpp  Renderer_D3D11.hpp  SwapChain.hpp  SwapChain_D3D11.cpp  Window_Win32.hpp
LuaSTG/Core/Graphics/Direct3D11/: Device.hpp  LetterBoxingRenderer.cpp  LetterBoxingRenderer.hpp  Texture2D.cpp  Texture2D.hpp
LuaSTG/LuaSTG/: AppFrame.cpp  AppFrameInput.cpp  AppFrameLua.cpp  LConfig.h  LuaSTG.manifest  Main.cpp
LuaSTG/LuaSTG/Custom/: resource.rc
LuaSTG/LuaSTG/Debugger/: ImGuiExtension.cpp  LuaHotReload.cpp  LuaHotReload.hpp
LuaSTG/LuaSTG/DiscordRPC/: DiscordRPC.cpp  DiscordRPC.hpp
LuaSTG/LuaSTG/GameResource/: AsyncResourceLoader.cpp  AsyncResourceLoader.hpp  ResourceDebug.cpp  ResourceManager.cpp  ResourceManager.h  ResourcePool.cpp
LuaSTG/LuaSTG/GameResource/Implement/: ResourceFontImpl.cpp  ResourceFontImpl.hpp  ResourcePostEffectShaderImpl.cpp  ResourcePostEffectShaderImpl.hpp  ResourceVideoImpl.cpp  ResourceVideoImpl.hpp
LuaSTG/LuaSTG/LuaBinding/: AsyncResourceJob.cpp  AsyncResourceJob.hpp  LW_DiscordRPC.cpp  LW_FileManager.cpp  LW_ResourceMgr.cpp  LuaCustomLoader.cpp  LuaCustomLoader.hpp  LuaWrapper.cpp  LuaWrapper.hpp  Resource.cpp  Resource.hpp
LuaSTG/LuaSTG/LuaBinding/modern/: GameObject.cpp  Mesh.cpp  SwapChain.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
cmake/: luastg_options.cmake
cmake/import/: d3dcompiler.cmake  stb.cmake  tracy.cmake
data/example/scripts/: main.lua
data/example/scripts/task/: pmd_music.lua
data/license/LuaSTG_Retro/: License.txt
data/license/LuaSTG_Sub/: License.txt
data/test/scripts/: hot_reload_preview.lua  main.lua  resource_pool.lua  test_blend_alpha_bal.lua  test_blend_color_burn.lua  test_dwrite.lua  test_f2dfont.lua  test_hgefont.lua  test_mesh.lua  test_model.lua  test_object_resource.lua  test_particle.lua  test_posteffect.lua  test_rendertarget.lua  test_resource_pool_manager.lua  test_sampler.lua  test_textrenderer.lua  test_texture.lua  test_ttf.lua  test_video.lua  test_window_and_display.lua
data/test/scripts/test/audio/: BadWav.lua  SoundEffect.lua
data/test/scripts/test/gameplay/: GameObjectUpdate.lua
data/test/scripts/test/graphics/: Mesh.lua  MeshRenderer.lua  SpriteRenderer.lua
data/test/scripts/test/input/: Clipboard.lua  InputMethod.lua
engine/audio/: CMakeLists.txt
engine/audio/backend/: AudioDecoder.cpp  AudioDecoderPMD.cpp  AudioDecoderPMD.hpp  AudioPlayerXAudio2.cpp  AudioPlayerXAudio2.hpp  StreamAudioPlayerXAudio2.cpp
engine/doc/: readme.md
engine/file-system/: CMakeLists.txt
engine/file-system/core/: ArchiveEncryption.hpp  DATArchiveEncryption.hpp  FileSystemArchive.cpp  FileSystemDATArchive.cpp  FileSystemDATArchive.hpp
engine/file-system/test/: Test.cpp
engine/video/backend/: VideoDecoder.cpp  VideoDecoderMediaFoundation.cpp  VideoDecoderMediaFoundation.hpp
engine/video/core/: VideoDecoder.hpp
imgui/binding/doc/: imgui.lua
tool/: CMakeLists.txt  package.ps1
tool/dat-archive-builder/: CMakeLists.txt  main.cpp
tool/version-info-generator/: config.json
tool/version-info-generator/template/: resource.rc
